@@ -1,20 +1,22 @@
 package br.com.angryapps.angry.api.resources;
 
+import br.com.angryapps.angry.api.exceptions.NotFoundResponseException;
 import br.com.angryapps.angry.api.mappers.ColumnMapper;
-import br.com.angryapps.angry.api.vm.BaseResponse;
+import br.com.angryapps.angry.api.responses.ApiResponses;
+import br.com.angryapps.angry.api.responses.BaseResponse;
+import br.com.angryapps.angry.api.responses.ListDataResponse;
+import br.com.angryapps.angry.api.responses.SingleDataResponse;
 import br.com.angryapps.angry.api.vm.ColumnVM;
 import br.com.angryapps.angry.db.CardRepository;
 import br.com.angryapps.angry.db.ColumnRepository;
 import br.com.angryapps.angry.models.Column;
 import jakarta.validation.Valid;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.http.HttpStatus;
-import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
+import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("api/v1/columns")
@@ -32,35 +34,45 @@ public class ColumnResource {
     }
 
     @PostMapping
-    ColumnVM createColumn(@Valid @RequestBody ColumnVM columnVM) {
+    SingleDataResponse<ColumnVM> createColumn(@Valid @RequestBody ColumnVM columnVM) {
         Column column = columnMapper.mapToColumn(columnVM);
 
         Column savedColumn = columnRepository.save(column);
-        return columnMapper.mapToColumnVM(savedColumn);
+        return ApiResponses.single(columnMapper.mapToColumnVM(savedColumn));
     }
 
     @PutMapping
-    ColumnVM updateColumn(@Valid @RequestBody ColumnVM columnVM) {
+    SingleDataResponse<ColumnVM> updateColumn(@Valid @RequestBody ColumnVM columnVM) {
         Column column = columnMapper.mapToColumn(columnVM);
         Column savedColumn = columnRepository.save(column);
-        return columnMapper.mapToColumnVM(savedColumn);
+
+        return ApiResponses.single(columnMapper.mapToColumnVM(savedColumn));
     }
 
     @GetMapping
-    List<ColumnVM> getAllColumns() {
-        List<Column> columns = columnRepository.findAll();
-        return columns.stream().map(columnMapper::mapToColumnVM).collect(Collectors.toList());
+    ListDataResponse<ColumnVM> getAllColumns() {
+        List<ColumnVM> columns = columnRepository.findAll()
+                                                 .stream()
+                                                 .map(columnMapper::mapToColumnVM)
+                                                 .toList();
+
+        return ApiResponses.list(columns);
     }
 
     @GetMapping(path = "/{id}")
-    ColumnVM getColumnById(@PathVariable UUID id) {
-        Column column = columnRepository.findById(id).orElseThrow(() -> new RuntimeException("Column by id not found"));
-        return columnMapper.mapToColumnVM(column);
+    SingleDataResponse<ColumnVM> getColumnById(@PathVariable UUID id) {
+        Optional<Column> byId = columnRepository.findById(id);
+        Column column = byId.orElseThrow(() -> new NotFoundResponseException("Column by id not found"));
+
+        ColumnVM columnVM = columnMapper.mapToColumnVM(column);
+
+        return ApiResponses.single(columnVM);
     }
 
     @DeleteMapping(path = "/{id}")
-    ResponseEntity<BaseResponse> deleteColumn(@PathVariable UUID id) {
-        columnRepository.findById(id).ifPresent(column -> columnRepository.delete(column));
-        return ResponseEntity.status(HttpStatus.OK).body(new BaseResponse<>(true, "Column deleted successfully"));
+    public BaseResponse deleteColumn(@PathVariable UUID id) {
+        columnRepository.deleteById(id);
+
+        return ApiResponses.ok("Column deleted successfully");
     }
 }
